grammar
Program -> StatementList

StatementList -> Statement StatementList | ε

Statement -> Declaration
            | Assignment
            | IfStatement
            | WhileStatement
            | PrintStatement

Declaration -> Type Identifier ; | Type Assignment

Assignment -> Identifier = Expression ;

IfStatement -> if ( Condition ) { StatementList } ElseStatement

ElseStatement -> else { StatementList } | ε

WhileStatement -> while ( Condition ) { StatementList }

PrintStatement -> print ( Expression ) ;

!!!     Expression -> Term | Expression + Term | Expression - Term      !!!
Expression -> Term Expression'
Expression' -> + Term Expression' | - Term Expression' | ε

!!!     Term -> Factor | Term * Factor | Term / Factor      !!!
Term -> Factor Term'
Term' -> * Factor Term' | / Factor Term' | ε

Factor -> Number | Identifier | ( Expression )

Condition -> Expression == Expression
            | Expression != Expression
            | Expression < Expression
            | Expression > Expression
            | Expression <= Expression
            | Expression >= Expression

Type -> int | float | char | bool

Identifier -> [_a-zA-Z][_a-zA-Z0-9]*

Number -> [0-9]+
